# xylo

./: .gitignore  .releaserc.json  .semver  CHANGELOG.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/hello-world/src/frontend/: .gitignore  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
examples/hello-world/src/frontend/src/: index.tsx  main.ts  page.tsx
scripts/: release.py  test_release.py
src/: cli.rs  lib.rs  main.rs  system_caller.rs
src/xylo/: cli.py  config.py
src/xylo/templates/: cookiecutter.json
src/xylo/templates/frontend/: index.html  main.tsx  package.json  tsconfig.json
src/xylo/templates/{{cookiecutter.name}}/: .ignore  xylo.yaml
src/xylo/templates/{{cookiecutter.name}}/.xylo/backend/: server.py
src/xylo/templates/{{cookiecutter.name}}/.xylo/frontend/: README.md  package.json
src/xylo/templates/{{cookiecutter.name}}/.xylo/frontend/app/: layout.tsx
src/xylo/templates/{{cookiecutter.name}}/xylo/backend/: pyproject.toml
src/xylo/templates/{{cookiecutter.name}}/xylo/backend/src/{{cookiecutter.name_with_underscores}}_backend/: info.py
src/xylo/templates/{{cookiecutter.name}}/xylo/frontend/: .gitignore  package.json  rollup.config.mjs
src/xylo/templates/{{cookiecutter.name}}/xylo/frontend/src/: index.tsx
templates/: .gitignore  .ignore
templates/.xylo/backend/: Cargo.toml
templates/.xylo/backend/src/: main.rs
templates/.xylo/frontend/: package-lock.json  package.json  tsconfig.json
templates/frontend/: package.json  tsconfig.json
templates/frontend/app/: page.tsx
