[package]
name = "pagekey-xylo"
description = "Self-hosted app creation kit."
license = "MIT"
homepage = "https://github.com/pagekey/xylo"
repository = "https://github.com/pagekey/xylo"
readme = "README.md"
version = "1.0.2"
edition = "2021"

[dependencies]
ctrlc = "3.4.4"
rust-embed = "8.4.0"
structopt = "0.3.26"
walkdir = "2.5.0"

[dev-dependencies]
tempdir = "0.3.7"

[[bin]]
name = "xylo"
path = "src/main.rs"
