[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.name}}-backend"
version = "0.1.0"
description = "Xylo app"
authors = []
[[tool.poetry.packages]]
include = "{{cookiecutter.name_with_underscores}}_backend"
from = "src"

[tool.poetry.dependencies]
python = "^3.8"
xylo = ">=0.7.0"

[tool.poetry.dev-dependencies]
